<resources>
    <string name="app_name">Pro Gardner</string>
    <string name="tips_txt">Tips</string>
    <string name="calendar_txt">Calendar</string>
    <string name="plants_txt">Plants</string>
    <string name="nutrients_txt">Nutrients</string>
    <string name="saves_txt">Saves</string>
    <string name="vegetables">Vegetables</string>
    <string name="herbals">Herbals</string>
    <string name="filter">filter</string>
    <string name="search">search</string>
    <string name="saves">Saves</string>
</resources>